<resources>
    <string name="app_name">智能记账本</string>

    <string-array name="account_types">
        <item>支出</item>
        <item>收入</item>
    </string-array>

    <string-array name="expense_categories">
        <item>餐饮</item>
        <item>购物</item>
        <item>交通</item>
        <item>学习</item>
        <item>娱乐</item>
        <item>其他</item>
    </string-array>

    <string-array name="time_presets">
        <item>当月</item>
        <item>最近 7 天</item>
        <item>最近 30 天</item>
        <item>本年</item>
        <item>自定义</item>
    </string-array>

    <string-array name="account_types_with_all">
        <item>全部</item>
        <item>支出</item>
        <item>收入</item>
    </string-array>

    <string-array name="expense_categories_with_all">
        <item>全部</item>
        <item>餐饮</item>
        <item>交通</item>
        <item>购物</item>
        <item>学习</item>
        <item>娱乐</item>
        <item>其他</item>
    </string-array>

    <string-array name="sort_modes">
        <item>最新优先 (时间倒序)</item>
        <item>最早优先 (时间正序)</item>
        <item>金额最高优先</item>
        <item>金额最低优先</item>
    </string-array>

    <string name="hint_username">请输入用户名 (EditText)</string>
    <string name="hint_password">请输入密码 (EditText)</string>
    <string name="login">登录 (Button)</string>
    <string name="register_text">还没有账号？点此注册</string>
    <string name="register_btn">注册 (Button)</string>
    <string name="hint_amount">金额 (EditText)</string>
    <string name="hint_note">备注 (EditText)</string>
    <string name="save">保存 (Button)</string>
</resources>